--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "babel-register": "^6.0.0",
+    "babel-core": "^6.0.0"
   },
   "scripts": {
     "clean": "rm -rf lib",
